--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,6 @@
 max_line_length = 90
 per-file-ignores = tests/*: F403,F405
 exclude = .git, __pycache__, .ipynb_checkpoints
+
+[mypy]
+ignore_missing_imports = True
