--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = wa_leg_api
-version = file: version.txt
+version = 0.3.0
 description = A python API for the Washington State Legislature web services
 long_description = file: README.md
 long_description_content_type=text/markdown
@@ -41,6 +41,11 @@ dev =
 docs =
     sphinx
     myst_parser
+upload = 
+    twine
+    build
+    setuptools
+    wheel
 
 
 [isort]
