--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,50 @@
 [build-system]
-requires = [ "setuptools", "wheel" ]
+requires = [ "setuptools" ]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "wa_leg_api"
+version = "0.4.0"
+description = "A python API for the Washington State Legislature web services"
+readme =  "README.md"
+license = { file="LICENSE" }
+keywords = [ "government-data", "washington", "washington-state", "legislature" ]
+authors = [ {name = "Janet Carson"} ]
+classifiers =[
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Operating System :: OS Independent"
+]
+dependencies = [
+    "beautifulsoup4",
+    "requests",
+    "python-dateutil",
+    "lxml"
+]
+
+[project.urls]
+repository = "https://github.com/j-carson/wa-leg-api"
+documentation  =  "https://wa-leg-api.readthedocs.io"
+
+[project.optional-dependencies]
+dev = [ "nox", "pytest", "pre-commit"]
+docs = [ "sphinx", "myst_parser", "pydata-sphinx-theme" ]
+upload = [ "twine", "build", "setuptools", "wheel" ]
+
+[tool.setuptools.packages.find]
+include = ["wa_leg_api*"]
+namespaces = false
+
+[tool.isort]
+profile= "black"
+
+[tool.mypy]
+ignore_missing_imports = true
 
 [tool.black]
 line-length = 110
