--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,6 +6,10 @@
 version: 2
 
 # Build documentation in the docs/ directory with Sphinx
+build:
+  tools:
+    python: "3.10"
+
 sphinx:
   configuration: docs/conf.py
 
@@ -17,4 +21,3 @@ python:
     path: .
     extra_requirements:
      - docs
-  system_packages: true
