--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,14 +9,14 @@ version: 2
 build:
   os: "ubuntu-22.04"
   tools:
-    python: "3.10"
+    python: 
+      version: "3.10"
 
 sphinx:
   configuration: docs/conf.py
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-  version: 3.8
   install:
   - method: pip
     path: .
