--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,8 +9,7 @@ version: 2
 build:
   os: "ubuntu-22.04"
   tools:
-    python: 
-      version: "3.10"
+    python: "3.10"
 
 sphinx:
   configuration: docs/conf.py
